# BicliqueVA

./: .gitignore  README.md  amo_naive.py  bvar.sh  debug_density.py  experimental_data.json  install.sh  pyproject.toml
bva-visualizer/: index.html  package.json
bva-visualizer/src/: App.tsx  styles.css
experiments/: basic.py  predictions.py  scaling_random_graphs.py
partition_algs/: biclique_finder.py  biclique_partition.py  bicliques_to_formula.py  custom_bva.py  depth_reencoder.py  externals.py  graph.py
partition_algs/cpp/: biclique_part  bp  bp.cpp  cnf_reader.cpp  out_test.cnf  output_bp.cnf  partition.txt  test.cnf  transform_partition  transform_partition.h
src/bicliqueVA/: debug_density.py
src/bicliqueVA/experiments/: basic.py  individual.py  sat_comp_analysis.py  scaling_random_graphs.py
src/bicliqueVA/partition_algs/: biclique_finder.py  biclique_partition.py  custom_bva.py  depth_reencoder.py  externals.py  three_layer.py
src/bicliqueVA/partition_algs/cpp/: Makefile  biclique_part  biclique_part.cpp  bp  bp.cpp  cnf_reader.cpp  cnf_reader.h  density_aware.py  graph.cpp  graph.h  transform_partition  (+1 more)
src/bicliqueVA/utils/: data_to_grouped_stacked_time_bars.py  data_to_latex_plots.py  data_to_latex_table.py  data_to_stacked_time_bar.py  data_to_tikz_table.py  experiment_results_to_tikz_width_bars.py  formula_gen.py  formula_to_graph.py
utils/: bicliques_to_formula.py  bva.cnf  clique_12.cnf  clique_20.cnf  formula_gen.py  formula_to_graph.py  graph.py  random_100_0.1.cnf  random_100_0.2.cnf  random_20_0.2.cnf  random_2cnf.cnf
