[project]
name = "BicliqueVA"
version = "0.1.0"
description = "Biclique Visualization and Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eznf>=0.0.5",
    "pqdict>=1.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "rich>=13.0.0",
    "python-sat>=1.9.dev2",
    "requests>=2.32.5",
]

[project.scripts]
biva = "bicliqueVA.experiments.individual:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bicliqueVA"]
